swagger parameters updated, added parameter's format'
